--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="212">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="224">
 
     
 
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section form4 cid-qF6tFgYoIm mbr-parallax-background" id="form4-7" data-rv-view="214">
+<section class="engine"><a href="https://mobirise.co/c">web site maker</a></section><section class="mbr-section form4 cid-qF6tFgYoIm mbr-parallax-background" id="form4-7" data-rv-view="226">
 
     
 
@@ -90,7 +90,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="TpIFoWYEvJvXKQHt8i/Ua5leqjMRv+GGFsa4pJ1urPErFxDFJzQbd+YGTQDB/aSyov4/TnMRDXXDPtbjckfqV/4Z0r7GXN1s3+5s6MeVhG6Fl/z9miyPi3c2RMXJIeju">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="tGep5jxzYcyn1kFg1YXGXHLYEh/1hJxtMKWgATunSpZ3cDqysCHN0ZCebiwHcxyt8NiOZr+94/YE4zVfj5kz/tn1TkeORwPUFe+oFOx83Q2tmsQImvH4EvNRXzkeq5yC">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
