--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="661">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="707">
 
     
 
@@ -41,7 +41,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://arthur365.github.io/GardenCityKebabHouse/" target="_blank">
-                         <img src="assets/images/2327-1577x479.png" alt="Garden City Kebab House" title="Garden City Kebab House" media-simple="true" style="height: 4.7rem;">
+                         <img src="assets/images/2327-1577x479.png" alt="Garden City Kebab House" title="Garden City Kebab House" media-simple="true" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-4" href="https://arthur365.github.io/GardenCityKebabHouse/" target="_blank">Garden City Kebab House</a></span>
@@ -53,7 +53,7 @@
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-danger display-4" href="https://arthur365.github.io/Flintshirewebsites/" target="_blank">
+                    <a class="nav-link link text-danger display-4" href="https://arthur365.github.io/GardenCityKebabHouse/page2.html" target="_blank">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>About Us</a>
                 </li><li class="nav-item"><a class="nav-link link text-danger display-4" href="https://arthur365.github.io/Flintshirewebsites/" target="_blank"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>
                         Contact Us</a></li><li class="nav-item"><a class="nav-link link text-danger display-4" href="https://arthur365.github.io/Flintshirewebsites/" target="_blank">
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section form4 cid-qF6tFgYoIm mbr-parallax-background" id="form4-7" data-rv-view="663">
+<section class="engine"><a href="https://mobirise.co/d">website software</a></section><section class="mbr-section form4 cid-qF6tFgYoIm mbr-parallax-background" id="form4-7" data-rv-view="709">
 
     
 
@@ -90,7 +90,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="s9oIiL8vgpvpdrwbiOX2vD8eiWVigKzkaCJUgrOzXL9tMf+GR6Ft03luiYBlwz5N66tqJmEPvXZrDTCOJtbzg8xQE8emMa7aYT+IPh+tiMcEcXBKVDmGptExlUowthLf">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="U+94mKz8UYLbsymAj7bpJ4ULkvJ+9JTrWQ150bhQBJKRL+tY3tD93K05sUKbaa+E/3Nwaa0eBHy7jx4PDZP82Oh85UOeXHXran1BmF3rj7wueiy1qBl0rbMe2xCkyj4u">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
