--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="799">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="863">
 
     
 
@@ -40,17 +40,17 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://arthur365.github.io/Flintshirewebsites/" target="_blank">
-                         <img src="assets/images/greedy-jacks-550x363.jpg" alt="GREEDY JACKS" title="GREEDY JACKS" media-simple="true" style="height: 4.7rem;">
+                    <a href="https://arthur365.github.io/GardenCityKebabHouse/" target="_blank">
+                         <img src="assets/images/2327-1577x479.png" alt="Garden City Kebab House" title="Garden City Kebab House" media-simple="true" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-4" href="https://mobirise.com">Garden City Kebab House</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-4" href="https://arthur365.github.io/GardenCityKebabHouse/" target="_blank">Garden City Kebab House</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-danger display-4" href="https://arthur365.github.io/Flintshirewebsites/" target="_blank">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Services</a>
+                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-danger display-4" href="https://arthur365.github.io/GardenCityKebabHouse/page2.html" target="_blank">
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="801">
+<section class="engine"><a href="https://mobirise.co/b">free website creator</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="865">
 
     
 
@@ -89,7 +89,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="5CyZVn7RUcNw9nCE8TqsYEuROachYQtILzESpk+20wHEc05V1BWZxGvrG6GJbsMNZaW/t+iiWuFd0+hf03tatg/4xHUBElQPoA1eHyOHmV2uRra39a1xBXp6ASyxjD7A">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="toT1Cgijex51Ec/EN5JCbcTMfWw4fYUPSS78jYDLlg3NYlUymEV44ihgdO4jQ+4+bvPNvSpfv37j9kSoUnCQUuItsgY79W7Y0mZ18QQHNNfYXxp/ljvS4bZjoKoxu+sv">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
