create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="863">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="955">
 
     
 
@@ -49,7 +49,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-danger display-4" href="https://arthur365.github.io/Flintshirewebsites/" target="_blank">
+                    <a class="nav-link link text-danger display-4" href="https://arthur365.github.io/GardenCityKebabHouse/" target="_blank">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
                 <li class="nav-item">
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free website creator</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="865">
+<section class="engine"><a href="https://mobirise.co/b">web creator</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="957">
 
     
 
@@ -89,7 +89,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="toT1Cgijex51Ec/EN5JCbcTMfWw4fYUPSS78jYDLlg3NYlUymEV44ihgdO4jQ+4+bvPNvSpfv37j9kSoUnCQUuItsgY79W7Y0mZ18QQHNNfYXxp/ljvS4bZjoKoxu+sv">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="QApKoR2MaQH9/KbGA9yrjlS4zRqZWkvQDOYH34xpotrEej6CUte2B0vDU/uP84+tuXa55w+Nmd03ELOEu8S+d8mv98PlD5nsNSUKcFbSDtD5FkKEc17VwRU4DIVHQtMm">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
