--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1127">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1169">
 
     
 
@@ -44,7 +44,7 @@
                          <img src="assets/images/2327-1577x479.png" alt="Garden City Kebab House" title="Garden City Kebab House" media-simple="true" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-4" href="https://arthur365.github.io/GardenCityKebabHouse/" target="_blank">Garden City Kebab House</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-4" href="https://arthur365.github.io/GardenCityKebabHouse/" target="_blank">Garden City Kebab Pizza House</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">make your own website for free</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1129">
+<section class="engine"><a href="https://mobirise.co/c">free web maker</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1171">
 
     
 
@@ -89,7 +89,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="IHzVWmgejITkDAkkDAmAoe7NIZoV3eROaBxrRBaX6cf9Od9oh2QVZFBfuELKMj0zjT2FEtOvoWc39WPCvVoA43N+6zm+AzUly60/xT1G8egX1bA8ACDtFJTtaG9oGsBz">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="A1KD86co8MlXnNtdDBvji5P2HqbHl5GlTaY59hSIkc81J9hnmAZ7EEOUdVXauyEkg3Y9b20DA32ArEuKK0Y0SSS+JH7qK18iAaHvrGVf/OvrUZeD/aiZ84j4U7FNqZHl">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
