create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1169">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1211">
 
     
 
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">free web maker</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1171">
+<section class="engine"><a href="https://mobirise.co/g">create your own website for free</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1213">
 
     
 
@@ -89,7 +89,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="A1KD86co8MlXnNtdDBvji5P2HqbHl5GlTaY59hSIkc81J9hnmAZ7EEOUdVXauyEkg3Y9b20DA32ArEuKK0Y0SSS+JH7qK18iAaHvrGVf/OvrUZeD/aiZ84j4U7FNqZHl">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="2zZolvAch8ja93jZLZOO+KmJu/Ok8vlmEGnoItALkwew7TvXJfYet1TzJAZhZk9CZi+IfIs1y9CvbTw9qoMeMPzC3r09UpPMxV8fWw5dmedY6cyojaGrfDpT++oVaGiQ">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
