--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1211">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1328">
 
     
 
@@ -40,17 +40,17 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://arthur365.github.io/GardenCityKebabHouse/" target="_blank">
-                         <img src="assets/images/2327-1577x479.png" alt="Garden City Kebab House" title="Garden City Kebab House" media-simple="true" style="height: 3.8rem;">
+                    <a href="https://arthur365.github.io/Flintshirewebsites/">
+                         <img src="assets/images/php0as4w5-480x485.png" alt="GREEDY JACKS" title="GREEDY JACKS" media-simple="true" style="height: 4.7rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-4" href="https://arthur365.github.io/GardenCityKebabHouse/" target="_blank">Garden City Kebab Pizza House</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-4" href="https://mobirise.com">Garden City Kebab House</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-danger display-4" href="https://arthur365.github.io/GardenCityKebabHouse/" target="_blank">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
+                    <a class="nav-link link text-danger display-4" href="https://arthur365.github.io/Flintshirewebsites/" target="_blank">
+                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-danger display-4" href="https://arthur365.github.io/GardenCityKebabHouse/page2.html" target="_blank">
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create your own website for free</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1213">
+<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1330">
 
     
 
@@ -80,7 +80,16 @@
                         <span class="icon-block__icon">
                             <span class="mbr-iconfont mbri-letter" media-simple="true"></span>
                         </span>
-                        <h4 class="icon-block__title align-left mbr-fonts-style display-5"><span style="font-style: normal;">Don't hesitate to contact us</span></h4>
+                        <h4 class="icon-block__title align-left mbr-fonts-style display-7"><span style="font-style: normal;">Don't hesitate to contact us</span><br><span style="font-style: normal;">Want to get in touch with us?
+</span><div><span style="font-style: normal;">&nbsp;
+</span></div><div><span style="font-style: normal;">If your order is late, incorrect, or you're not happy with the food, please contact the takeaway directly on </span></div><br><div><span style="font-style: normal;">01244-810268.
+</span></div><div><span style="font-style: normal;">
+</span></div><div><span style="font-style: normal;">&nbsp;If you paid online and require a refund, and you're unable to contact the takeaway please contact Datman LTD on 01534 876163 who will attempt to contact Garden City Kebab Pizza House in order to resolve your request.
+</span></div><div><span style="font-style: normal;">
+</span></div><div><span style="font-style: normal;">Is your order late?
+</span></div><div><span style="font-style: normal;">
+</span></div><div><span style="font-style: normal;">The best thing to do is to give us a call. We’ll know exactly where it is, and why it’s been delayed. You can call us directly on 01244810268.
+</span></div><div><span style="font-style: normal;"><br></span></div></h4>
                     </div>
                     <div class="icon-contacts pb-3">
                         <h5 class="align-left mbr-fonts-style display-7">Garden City Kebab House ,Deeside,</h5>
@@ -89,7 +98,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="2zZolvAch8ja93jZLZOO+KmJu/Ok8vlmEGnoItALkwew7TvXJfYet1TzJAZhZk9CZi+IfIs1y9CvbTw9qoMeMPzC3r09UpPMxV8fWw5dmedY6cyojaGrfDpT++oVaGiQ">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="ocufVBTJOxyTaeatwHHq1zGvfrZdh1xdJnTbNdSGhdowiMV9EAUe8ZjN5zrJy1TDG66mTSfUj29iQEIwcS18XyKlyOoc0si5SWuZ/etnlZfQOf+Au6hfPpC1JbCmPJHe">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
