--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="90">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="252">
 
     
 
@@ -44,7 +44,7 @@
                          <img src="assets/images/2327-1577x479.png" alt="Garden City Kebab House" title="Garden City Kebab House" media-simple="true" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://arthur365.github.io/GardenCityKebabHouse/" target="_blank">Garden City Kebab Pizza House</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="https://arthur365.github.io/GardenCityKebabHouse/" target="_blank">Garden City Kebab Pizza House</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="92">
+<section class="engine"><a href="https://mobirise.co/c">site maker</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="254">
 
     
 
@@ -98,7 +98,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="WPh8ljBrLB5Nl0zues/9sgPbqE6bvdaEMxTVW+Fp1BJoTbFgSydIN4h0V0H2mPAZuc1ZC8HctNhRfHOQmLpsb3LdgH2boXSrhYCHb25HopFX8M6wJvSUUk3Aqo92YIEf">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="ovrUDsFX/4DHeSQ1+a26TjRAmwFxDACe3IxlRoIpRKRMJOFwE21tUkKuEIPhAlLxsp7TlaxX0QDmxUsnWxyMOS8MHwVua6KLUAvRm/ygTpBZeA77875oUc52bC0dAgOk">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
