create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="611">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="696">
 
     
 
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="613">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="698">
 
     
 
@@ -98,7 +98,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="fpA6954NpJnU1x2cx7x4WClGvvyvUkQjcEqkBIB4xpmOG0Daghde3TG15Tkt+I7SlPq+1BQ0nJcjk24NfTHr/oS15NDqZQrHpvnvapczWf0RttGyLODuST5k61gAqnB9">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="pIEgf5rZpXs2skY7xUu6qNeVCxkDutOa2zn/MoRNAsewEE9PwYAUjLXDU4ibg+/4iKL4zffYAPvLvaijdX2pBLPaz2TVIjySuyRQ6aeBKlX3ZVU6oTRTo/14O11RZy5j">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
