create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1464">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1549">
 
     
 
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1466">
+<section class="engine"><a href="https://mobirise.co/b">free web page creator</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1551">
 
     
 
@@ -93,7 +93,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="Upka1W4ENJLuIFWzFV5cmFod2jBImrCudVGJHJJlPZMt1H399t/fC5uN8lLnGJDdMQKC/wDF1ISvWnIUJ+PX85ttFrYfO2C6vpDqHpjuefmXJWBS/R8KXfeeVIlPGq9F">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="I9I+7ulWkICGGBhTbs4DJRtOtxwKWbqljjkNKAidk03EW0+IkvOhAaDMGiVJYQLIuMfS/bsOupnHPG12mmNlwCf33xqDkcETUcC0HZe71bLC+ivZciYoIG9CE4RZNtyV">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
