create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="223">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="300">
 
     
 
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">how to make your own website for free</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="225">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="302">
 
     
 
@@ -93,7 +93,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="Ak0S7Kxlr0ty++Xe+hWE8DediFBdnkQA5TAWmIk8zvP83ijz99qtcJfW/opCYddt9ozrIV9dj/VPJy8liQyEWH24wiO1Cq1HwphbvmUJL42yzxdKZ5XzFe5c+KYfZmVm">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="hEnyQbT4zftk4to+5PLKFP2vOTMraC5Kkiy1HrhJ5/TCZ8c2lY11/Dsm08l7x9zp3c37yHTe6gGQrByn1TRy5rGtBdLSUiGJ/wQAe/BCer3TeOPw5IJUjvbTIoeKnAh5">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
