create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="217">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="373">
 
     
 
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">web creation software</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="219">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="375">
 
     
 
@@ -93,7 +93,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="hvXEJ68Wpo8SQ5ekuIciVdcr5mdh6a9x9HDTm8uswJUk4JmPU6PeX2EBMeCwOONUa8ytDMP98eDpygWpGB8r7JVawdjK53eaVNG+8eb7liodwFX3CwQD/XG1g9+Gs429">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="KASljPBMQMUvHec680P3ZP3tBpqpoHb7kbjklzH2hNPfrcZtlMYxcpDgjOorY1UZmSxBILA260jRB/F28BEbQ1mC5EdlBEsr4D0DjPxMaQAzjvxTXoXDHWvxCWCyKzFy">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
