create github pages

--- a/page2.html
+++ b/page2.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="cid-qF753C9bQ5" id="image3-e" data-rv-view="228">
+<section class="engine"><a href="https://mobirise.co/d">free web software</a></section><section class="cid-qF753C9bQ5" id="image3-e" data-rv-view="228">
 
     
 
