--- a/page1.html
+++ b/page1.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="223">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="223">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="4tPU+VlW7Ww70+IHdNxlf4LS/zo3zb0TxTddg821IHKzGVOnwlJryT4ZMcp1n1z+QL9eyVtt1X/ZVR7wB0xqPLTpe1nLWNs1Y4XnZH40IY4T8Sv9TZYEilTB3evBu2KK">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="IUSOP/A5GVPJ09nAJVFH0ufZtF6pBxyc1BEY7ORS7zFlpxwWcEhrFBTfcyXnv2LDZd9taKWCVsYaHuOFvytPdreChofGzIeAVx6HEIlO+GnZfvd7iWogGx8GRMxQq7jB">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
