create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="221">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="304">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="223">
+<section class="engine"><a href="https://mobirise.co/j">design your own website</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="306">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="IUSOP/A5GVPJ09nAJVFH0ufZtF6pBxyc1BEY7ORS7zFlpxwWcEhrFBTfcyXnv2LDZd9taKWCVsYaHuOFvytPdreChofGzIeAVx6HEIlO+GnZfvd7iWogGx8GRMxQq7jB">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="UG/jRSzMbjjsinRWSBD3aaCMz9eZ5z1JxM1f/4ou1VOeyAuLtNKJG1KieOnGt5OoXubkpV77von6VPxUuyCI5i/X6I153Q/diHwuVost0Mb83jyC3ZLvrJGEV4SyGVBZ">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
