create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="802">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="968">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="804">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="970">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="3GxB1rPeI5VMfXZ0F7R3c3AW52SdzkNCBtLWgMPVxyZREaXv3zUePHPm5rYWmM8ekOIH+zwBm1EV1CSwvoK0UvFlJ7m15xnuFpvvAMjZBjaqj1jAhalTSpNmG+VEqv0k">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="B33Hqw74xZ0pRErIMmyH4sPT1NEhHpLItD5IoGez+41bd7OAUU+w/r6/D6j6Y31weLGn2Yxz8QdS3fk9XI2cJDn9DFiBD7qhSXfJXa0xEsnCincKYoTxVK+myn0H2dFI">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
