create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1217">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1300">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1219">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1302">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="HOf/vdwouqp0Yv47YT+hd/vGx27Mh+c3fOibrB4pkWi7qHTN+I4wU5AIqvs4re9EEk62tgj7tYOAjpfZPjQoNM3ocziKQi/eemKPtJiktlqXDruLd42qlLhjQx44DYaT">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="5EzE1KQ1cqClyBrI0DXmREoX54TF5Wh1GfilG3zustZsYOhKe+AMR+SSi6IWsxsg7QZKb7HwPw5ncFHoD51dJIcao3WdfQ3AiCUPlXaVyIi9VdGyQVtSHhjYvYqwtH3H">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
