create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="2102">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="343">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="2104">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="345">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="fLWeefmDaZujbKb7nMazjoepVSrCKFgNpB0mGQgZXEpTzZeQF73AZUOdrl9KGHnVXFB+CqhaIjtjjMAMuwCmI5vany0huDqW1CP6cKWoJ+9eXvxrTHuzSMUjb+exOv19">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="sBk2qfXZQwn/UQtYqM/73gkOWSs5zxbsIrycdXfN4jPcljZxdO+5WhDO3d9bEtIPG5Ztj2unXtUCsmeq6dRyiMG/RKQSFu0Zc7SnGCoblOcRMzxPRvScDqZw9wRm219M">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
