create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="865">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="952">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="867">
+<section class="engine"><a href="https://mobirise.co/d">website software</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="954">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="IHlq2uIBeoTpO1izQapR7bbQwMxDr0F+UazdhsHkT/YNFqbNvaK4y2mfCKtPcoudQKRhmtgSBwqg1D+WFvRmsgMzzM3/7eAcHBXgI6Kjj99Mf9Vf++CCPrZpeQ0wrxBA">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="Sk6x+rZiw2Wu+IYCqdTHh2AS0TCYIbxPOTbHTFthUeLgZ98iv4yktP+1A4iYT4+g4ctk8Jmu3A+0tYEnXXyr30nyVIMa7kKT9HTUKtkg9+uR5lcgs/KpOqBdHyBC2thU">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
