create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="193">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="310">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free site creator</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="195">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="312">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="OmztaU/+PB720vLvpilCVOUZNsalUzmzHLE+Uk9pUOhu4a8mnYIxvywZTCcttkgLTSdHXJnZr6p8EFmjrTGp68zWhEEbQWsff7cdQ0rjpbhLH6lMbHAORbg/J99T8GXS">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="4TogP9BMYGijIwVZ18znI8wJ2LZPyddFsPBBRoEGbbz1iTchWvqlNnnAJp9AVA/D7GurDkNu2yk8BS7Ih8lkCWpQgrjwOxLeVSACxdOQQtG3DCJrs+w4cerN9rrkBQzD">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
